<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SearchFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:inputType="text"
        android:layout_centerInParent="true"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@id/logo"
        android:drawableEnd="@drawable/ic_search_black_24dp"
        android:hint="@string/search_for_videos"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/searchEditText"
        android:layout_marginTop="60dp"
        android:background="#F5F5F5"
        android:textColor="#525252"
        android:text="@string/search" />
</RelativeLayout>